added the navbar

--- a/index.html
+++ b/index.html
@@ -1,12 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
+    <script src="https://cdn.tailwindcss.com"></script>
+
 </head>
+
 <body>
-    <h1 class="font-bold">this is mini social</h1>
+    <!-- navbar -->
+    <header>
+        <nav class="px-10">
+            <div class="logo">
+                <h3 class="text-3xl">Snipfeed</h3>
+            </div>
+
+            <ul class="nav-links">
+                <li><a href="">Home</a></li>
+                <li><a href="">Profile</a></li>
+                <li><a href="">Notification</a></li>
+                <li><a href="">Messages</a></li>
+            </ul>
+
+            <div class="user-pic">
+                <img src="https://i.ibb.co/Y4Kg8JsR/depositphotos-150975580-stock-photo-portrait-of-businesswoman-in-office.webp" alt="User" />
+            </div>
+        </nav>
+    </header>
 </body>
+
 </html>
